// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProjectExternalLink /> should adopt the faIcon property 1`] = `
<ProjectExternalLink__ListItem
  data-tip="External Link"
  hasFocus={false}
>
  <ProjectExternalLink__StyledA
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      External Link
       
      <FontAwesome
        fixedWidth={true}
        name="meh-o"
      />
    </span>
  </ProjectExternalLink__StyledA>
</ProjectExternalLink__ListItem>
`;

exports[`<ProjectExternalLink /> should adopt the hasFocus property 1`] = `
<ProjectExternalLink__ListItem
  data-tip="External Link"
  hasFocus={true}
>
  <ProjectExternalLink__StyledA
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      External Link
       
      <FontAwesome
        fixedWidth={true}
        name="external-link"
      />
    </span>
  </ProjectExternalLink__StyledA>
</ProjectExternalLink__ListItem>
`;

exports[`<ProjectExternalLink /> should adopt the name property 1`] = `
<ProjectExternalLink__ListItem
  data-tip="Testing"
  hasFocus={false}
>
  <ProjectExternalLink__StyledA
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      Testing
       
      <FontAwesome
        fixedWidth={true}
        name="external-link"
      />
    </span>
  </ProjectExternalLink__StyledA>
</ProjectExternalLink__ListItem>
`;

exports[`<ProjectExternalLink /> should adopt the url property 1`] = `
<ProjectExternalLink__ListItem
  data-tip="External Link"
  hasFocus={false}
>
  <ProjectExternalLink__StyledA
    href="http://link.to"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      External Link
       
      <FontAwesome
        fixedWidth={true}
        name="external-link"
      />
    </span>
  </ProjectExternalLink__StyledA>
</ProjectExternalLink__ListItem>
`;

exports[`<ProjectExternalLink /> should render and match the snapshot 1`] = `
<ProjectExternalLink__ListItem
  data-tip="External Link"
  hasFocus={false}
>
  <ProjectExternalLink__StyledA
    href="#"
    rel="noopener noreferrer"
    target="_blank"
  >
    <span>
      External Link
       
      <FontAwesome
        fixedWidth={true}
        name="external-link"
      />
    </span>
  </ProjectExternalLink__StyledA>
</ProjectExternalLink__ListItem>
`;
